# nomad-molecules

./: README.md  install.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
src/: config.yaml
src/nomad_molecules/normalizers/: __init__.py  atoms_utils.py  molecules.py
src/nomad_plugin_molecules.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/nomad_plugin_molecules/common/: molecule_information.py
src/nomad_plugin_molecules/normalizers/: __init__.py  atoms_utils.py  molecule.py
tests/: conftest.py
tests/data/: 3xH2O.json  H2O.json
tests/normalizer/: test_atoms_utils.py  test_molecule.py  test_molecules.py
